Fix enum state
